--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "native",
-    "slug": "native",
+    "name": "Gaming Haven Z",
+    "slug": "gaminghavenz",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -10,13 +10,14 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.sgalanb.native"
+      "bundleIdentifier": "com.sgalanb.gaminghavenz"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sgalanb.gaminghavenz"
     },
     "plugins": [
       "expo-router",
@@ -32,6 +33,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "72be9850-2a1b-4592-a60a-0d07dfc37981"
+      }
     }
   }
 }
