--- a/apps/native/eas.json
+++ b/apps/native/eas.json
@@ -1,26 +1,21 @@
 {
-    "cli": {
-      "version": ">= 12.6.2",
-      "appVersionSource": "remote"
+  "cli": {
+    "version": ">= 14.2.0",
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
     },
-    "build": {
-      "development": {
-        "developmentClient": true,
-        "distribution": "internal",
-        "channel": "development"
-      },
-      "preview": {
-        "distribution": "store",
-        "channel": "preview"
-      },
-      "production": {
-        "distribution": "store",
-        "autoIncrement": true,
-        "channel": "production"
-      }
+    "preview": {
+      "distribution": "store"
     },
-    "submit": {
-      "production": {}
+    "production": {
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
-  
+}
