--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "dev": "expo run:ios",
     "lint": "expo lint",
-    "build": "eas build --platform all --local --profile production"
+    "build": "eas build --platform all --local --profile production",
+    "clean": "git clean -xdf .expo ios android node_modules"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,7 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -42,6 +43,8 @@
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
@@ -49,7 +52,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "catalog:"
   },
   "private": true
 }
