--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "exports": {
     "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
+    "./next-js": "./next.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -20,7 +19,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-turbo": "^2.3.0",
     "globals": "^15.12.0",
-    "typescript": "^5.3.3",
+    "typescript": "catalog:",
     "typescript-eslint": "^8.15.0"
   }
 }
