store twitch access_token in redis db

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,14 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "UPSTASH_REDIS_REST_URL",
+        "UPSTASH_REDIS_REST_TOKEN",
+        "TWITCH_CLIENT_ID",
+        "TWITCH_CLIENT_SECRET",
+        "CRON_SECRET"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -18,8 +25,16 @@
       "persistent": true
     },
     "dev": {
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": [
+        "UPSTASH_REDIS_REST_URL",
+        "UPSTASH_REDIS_REST_TOKEN",
+        "TWITCH_CLIENT_ID",
+        "TWITCH_CLIENT_SECRET",
+        "CRON_SECRET"
+      ]
     }
   }
 }
