--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./types": "./src/types.ts"
   },
   "scripts": {
     "dev": "tsc --watch",
